<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailCampaign">

    <ImageView
        android:id="@+id/campaign_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/campaign_backgrund_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:id="@+id/ContentArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campaign_image"
        android:orientation="vertical">


        <TextView
            android:id="@+id/campaign_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/black_200"
            android:text="@string/campaign_detail_title_dummy" />

        <TextView
            android:id="@+id/campaign_fund_collected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/campaign_detail_fund_collected_dummy"
            android:textColor="@color/blue_primary"
            android:layout_marginTop="8dp"

            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/campaign_fund_collected_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:orientation="horizontal">


            <TextView
                android:id="@+id/constant_fund_target_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textColor="@color/black_200"
                android:fontFamily="@font/poppins_regular"

                android:text="@string/terkumpul_dari_text" />

            <TextView
                android:id="@+id/fund_target"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black_200"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/campaign_detail_fund_collected_from_dummy" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/campaign_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressDrawable="@drawable/costume_progress"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"

            android:max="100"
            android:indeterminateTint="@color/blue_primary"
            app:layout_constraintTop_toBottomOf="@+id/textFundCollected"
            android:progress="50" />


        <TextView
            android:id="@+id/campaign_contant_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:textColor="@color/black_200"
            android:fontFamily="@font/poppins_bold"

            android:text="@string/description_constant_text" />
        <TextView
            android:id="@+id/campaign_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:textColor="@color/black_100"
            android:fontFamily="@font/poppins_regular"


            android:text="@string/campaign_detail_description_dummy" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email"        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>